release/loadgenerator-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator%%TEST%%
  namespace: novusbee
spec:
  selector:
    matchLabels:
      app: loadgenerator%%TEST%%
  replicas: 1
  template:
    metadata:
      labels:
        app: loadgenerator%%TEST%%
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      imagePullSecrets:
      - name: gitlab-pull-secret
      containers:
      - name: main
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
        image: registry.gitlab.com/novusbee/microservices/loadgenerator:ctxTestsv1
        args:
        - loop
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
