release/showrecommendations-httproute.yml
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: showrecommendations
  namespace: novusbee
spec:
  parentRefs:
    - name: recommendationservice
      kind: Service
      group: core
      port: 8080
  rules:
    - matches:
      - headers:
        - type: "Exact"
          name: "AppEz-Context"
          value: "show-recommendations"
      backendRefs:
        - name: recommendationservice--appezctx--showrecommendations
          port: 8080
    - backendRefs:
      - name: recommendationservice
        port: 8080
